exercise 1.12/small_app/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: smallapp-svc
          servicePort: 2345
